Add more responsivity

--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
 
 
       let board_height = screen.height - 30
+      
+      if (board_width < 800) {board_height = screen.height - 90}
+
       let board_width = screen.width
 
       cell_length = 32
