--- a/index.html
+++ b/index.html
@@ -263,6 +263,8 @@
       }
 
       function showNewGamePage() {
+        timer_paused = true
+
         if (board_width < 800) {
           startGame()
           return false
@@ -271,12 +273,7 @@
         document.getElementById('newGamePage').style.visibility = 'visible'
       }
 
-      function startGame() {
-        document.getElementById('newGamePage').style.visibility = 'hidden'
-
-        flagged_boxes = Array()
-        game_done = false
-
+      function drawTable() {
         var tableMarkup = "<tr><td colspan='" + width + "'><div id='status-bar'>"
         tableMarkup += "<div class='status'>Mines: <div class='status-box' id='MineCount'>" + mines + "</div></div>"
         tableMarkup += "<div id='Icon' onclick='showNewGamePage()'><i class='fa fa-smile-o'></i></div>"
@@ -292,6 +289,15 @@
         }
         
         gameBoard.innerHTML = tableMarkup
+      }
+
+      function startGame() {
+        document.getElementById('newGamePage').style.visibility = 'hidden'
+
+        flagged_boxes = Array()
+        game_done = false
+
+        drawTable()
 
         first_choice = true
 
@@ -368,7 +374,9 @@
       heightSlider.oninput = function() {
         height = this.value
         heightValue.innerHTML = this.value
+        gameBoard.style.width = `${width * (board_height / height)}px`
         mines = Math.floor((minesSlider.value * (height * width)) / 100)
+        drawTable()
       }
 
       widthSlider.oninput = function() {
@@ -376,11 +384,13 @@
         widthValue.innerHTML = this.value
         gameBoard.style.width = `${width * (board_height / height)}px`
         mines = Math.floor((minesSlider.value * (height * width)) / 100)
+        drawTable()
       }
 
       minesSlider.oninput = function() {
         mines = Math.floor((this.value * (height * width)) / 100)
         minesValue.innerHTML = this.value + '%'
+        drawTable()
       }
 
       startGame()
