Fix: Full Screen mode draws table when checked

--- a/index.html
+++ b/index.html
@@ -369,6 +369,8 @@
           heightSlider.disabled = false
           widthSlider.disabled = false
         }
+
+        drawTable()
       }
 
       heightSlider.oninput = function() {
